Did some edits to the style elements to fix the word-cut off that was happening on the buttons. Began writing some code to start the local storage process.

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ textarea{
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  padding-right:20px;
 }
 
 .past {
@@ -63,6 +64,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  padding-left: 20px;
 }
 
 .saveBtn i:hover {
